section 4 on distributive goals drafted, some work on section 5 started

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -440,10 +440,12 @@ The existence of this route to knowledge shows that goal ascription doesn't inva
 
 Note that we are not suggesting that the above inference captures the only route to knowledge of the goals of actions,
 or that it provides anything like a comprehensive theory of the evidential basis of goal ascription.
-This route to knowledge has only limited applications.
-For example, it cannot be used when an action is the best available means of achieving two or more comparably desirable outcomes.
+Clearly it does not.
+The inference has only limited applications.
+For example, it cannot be used when an action is the best available means of achieving two or more comparably desirable outcomes. 
+Fortunately the argument that follows does not depend on having a comprehensive theory of evidence for goal ascription.
 The point of this brief discussion was only to 
-consider the sort of evidence that can bear on goal ascrpition
+consider the sort of evidence that can bear on goal ascription
 and to 
 show that 
 even those incapable of ascribing mental states like belief 
@@ -545,59 +547,183 @@ That the problem of opaque means exists
 is the first premise in our argument
 that models of interpretation based on pure observation are less powerful than models taking into account the possibility of interaction.
 They are less powerful in this sense: 
-some routes to knowledge of the goals of actions are available only where a model of interpretation takes the possibility of interaction into account.
-In what follows we shall suggest that abilities to engage in joint action with others provides a route to knowledge of the goals of other agents' actions  which avoids the problem of opaque means.
-This is one way in which moving away from a purely observational model of interpretation yields a richer evidential base for ascriptions.
+some routes to knowledge of the goals of actions are available only where a theory of the evidential basis of mindreading 
+ takes the possibility of interaction into account.
+In what follows we shall explain how abilities to interact with others provide a route to knowledge of the goals of other agents' actions  which avoids the problem of opaque means.
+This is one way in which moving away from a purely observational model of mindreading yields a richer evidential base for ascriptions.
 
 
-\section{Joint action}
+\section{Interactions involving distributive goals}
 \label{sec:joint_action}
 Our overall aim is to defend this claim:
 there are routes to knowledge of the goals of others' actions
 which are closed to
-interpreters who merely observe their targets
+mindreaders who merely observe their targets
 but open to 
-interpreters capable of interacting with their targets.
+mindreaders who are, or appear to be, capable of interacting with their targets.
 As a preliminary to defending this claim,
-we need to specify the types of interaction which are relevant.
-We shall focus on joint action.
+we need to specify which types of interaction are relevant.
+That is the aim of this section.
 
-***Much disagreement about what it is.
-Necessary condition is distributive goal.
-If people want to disagree, this is only terminological.
+Let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
+First, this outcome is a one to which each agent's actions are individually directed.
+Second, each agent's actions are related to the outcome in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed in bringing about this outcome.
+
+To illustrate,
+suppose that, while doing some gardening,
+we find a turnip too big for any of us easily pull out of the ground alone.
+We each individually intend that we all pull up the enormous turnip
+and we act on this intention.%
+\footnote{
+For an argument that it is possible for each of us individually to intend that we do something, see \citet{Bratman:1999fr} and \citet[Chapter 2]{Bratman:2012fk}.
+}
+There is a single outcome,
+freeing the turnip,
+to which each of our actions is individually directed.
+And it is possible for all of us to succeed in bringing about this outcome.
+So this outcome is a distributive goal of our actions.
+
+%Contrast this episode with an alternative where no distributive goal is involved.
+%Instead of intending that we all pull up the enormous turnip,
+%each of us intends that she herself pull it up.
+%While all of our actions are directed to similar outcomes (they all involve pulling up the turnip),
+%these are clearly different outcomes.
+%They are clearly different because one could occur while another did not;
+%one of us might have broken an arm and been unable to pullwhile the others succeeded.
+%So in this case, freeing the turnip is not a distributive goal of our actions.
+%For some actions to have a distributive goal,
+%it is necessary that there be a single outcome (and not merely similar outcomes) to which they are directed.
+
+In defining `distributive goal' we stipulated that it must be possible for all of the agents of actions with a distributive goal to succeed relative to that outcome.
+Consider a variation on our first turnip-pulling story.
+Instead of each intending that we pull up the turnip,
+we each simply intend  to pull up the turnip.
+In this case,
+some might claim that
+this amounts to us each intending that he or she pulls up the turnip.
+And this claim might be taken to support the further claim that
+there is no outcome to which each of our actions are directed
+in virtue of our having these intentions
+such that we could all succeed relative to this outcome.
+%, given our intentions in this alternative case, we could not all succeed relative to the outcome of pulling up the turnip---%
+%that if your actions were to succeed relative to the turnip's extraction,
+%then ours would fail.
+We take no stand on whether either claim is correct.
+For our purposes all that matters is that there are distributive goals.
+And the existence of distributive goals follows from the possibility of each of us 
+intending that we pull up the turnip
+(rather than simply
+intending to pull it up).
+
+Note that our actions could have a distributive goal even without us each intending that we do something.
+As another variation on the turnip-pulling story,
+suppose that we each individually intend to 
+	contribute to pulling up the turnip or pull it up.
+Such intentions are agent neutral in this sense:
+relative to such an intention an agent 
+	could succeed by acting alone 
+and
+  she also could succeed by acting with unspecified other agents.
+Plausibly our having these intentions is sufficient for our actions to have a distributive goal.
+For in virtue of these intentions each of our actions is directed to the turnip's extraction,
+and this is an outcome relative to which it is possible that all of our actions succeed.
+
+For two agents' actions to have a distributive goal it is sufficient that their actions constitute a joint action 
+(at least this is true on almost any account of joint action).%
+\footnote{
+We know of two definitions of joint action on which it is not straightforward that all joint actions involve distributive goals.
+One is provided 
+ is provided by \citet[p.\ 366]{ludwig_collective_2007} and discussed in footnote \vref{fn:ludwig}; the other is due to 
+\citet[p.\ 70]{Sebanz:2006yq}.
+According to Sebanz and colleagues' `working definition', 
+`joint action can be regarded as any form of social interaction whereby two or more individuals coordinate their actions in space and time to bring about a change in the environment'
+(\citeyear[p.\ 70]{Sebanz:2006yq}).
+On one way of reading this, the latter part is equivalent to `a change in the environment is such that: to bring it about two or more individuals coordinate their actions';
+ this does suggest that the actions have a distributive goal.
+On other standard accounts it is straightforward that joint action involves distributive goals.
+Compare 
+	\citet[pp.\ 329-31]{Bratman:1992mi},
+%	\citet[p.\ 40]{Butterfill:2011fk},
+	\citet[pp.\ 96-7]{Searle:1990em} and
+	\citet[pp.\ 168-9]{gilbert:2009shared}.
+}
+However, the converse does not hold.
+As this the turnip-pulling variation  indicates,
+two or more agents' actions may have a distributive goal 
+even though the agents do not know about each others' intentions or actions.
+In fact our actions might have a distributive goal even though none of us is aware of this, or even of the others' existence. 
+(We shall refrain from illustrating this point by contriving a truly gigantic turnip and a completely dark, very windy night, but we are sure readers will be able to imagine how this would go.)
+One consequence of this is that 
+two or more agents' actions may have a distributive goal
+even though they are not engaged in joint action
+(at least not on any standard account of joint action).%
+\footnote{
+\label{fn:ludwig}
+According to 
+	 \citet[p.\ 366]{ludwig_collective_2007}, 
+`The concept of a joint action as such is just that of an event of which there are multiple agents.'
+Depending on what events are and what it is to be the agent of an event,
+it may turn out that,
+on Ludwig's definition,
+our actions' having a distributive goal 
+is sufficient for
+us to be engaged in joint action.
+However, other accounts of joint action have the consequence that each agent involved in a joint action must believe or know something about the jointness of her action.
+See 
+	\citet[p.\ 103]{Bratman:1993je}, %common knowledge
+	\citet[p.\ 40]{Butterfill:2011fk},
+	\citet[p.\ 10]{Kutz:2000si}, %Agents acting on a shared intention have `a conception of themselves as contributors to a collective end.'
+	\citet[p. 56]{miller_social_2001} % requires that each agent believes her actions are interdependent with the other agent's.
+	and
+	\citet[p.\ 361]{Roth:2004ki}. %: `each participant ... can answer the question of what he is doing or will be doing by saying for example ``We are walking together'' or ``We will/intend to walk together.''' 
+}
+
+
+The notion of a distributive goal is a 
+narrowly technical one.
+In introducing this notion by stipulation we are not aiming to match anyone's intentions about anything.
+What matters for now is just that the definition is theoretically coherent and that it is possible for actions to have distributive goals.
+Our aim in introducing distributive goals 
+ is to capture a minimal requirement on the sort of interactions 
+relevant to characterising a route to knowledge of the goals of actions
+available only to interacting mindreaders.
+% 
+% relevant to explaining how 
+%interacting mindreaders 
+%might be able to exploit routes to knowledge of the goals of actions
+%which would be unavailable  were  they mere observers.
 
 
 
 \section{Your-goal-is-my-goal: a route to knowledge}
-If an interpreter is able to interact with her targets,
+If a mindreader is able to interact with her targets,
 if she is not limited to merely observing them,
 how might this provide her with a route to knowledge of the goals of their actions?
-The intuitive idea we started with hinges on joint action, a particular form of interaction in which the actions of two or more agents are directed to a single goal (see section \vref{sec:joint_action}).
+The intuitive idea we started with hinges on interactions involving distributive goals
+(see \vref{sec:joint_action}).
 Our intuitive idea was this:
-if an interpreter is engaged in joint action with her target, 
-it's easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
-So if she knows the goal of her own actions and she knows that she is engaged in joint action with her target,
+if a mindreader is engaged in an interaction with her target that involves a distributive goal, 
+it may be easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
+So if she knows the goal of her own actions and she knows that she is engaged in an interaction involving a distributive goal  with her target,
 then she already knows what the goal of her target's actions are.
 %Roughly speaking, the interpreter can reason about her target thus: your goal is my goal.
 
 Of course this intuitive idea won't work as it stands.  
-For the inference it captures relies on the premise that the interpreter and her target are engaged in joint action.
-But for the interpreter to know this premise---for her to know that they are engaged in joint action---it seems she must   already know which goal her target's actions are directed to.
-Worse,
-on many accounts of joint action the mere truth of the premise  would require the interpreter to know the goal of her target's actions.%
-\footnote{
-*ref}
-Apparently, then, engaging in joint action presupposes, and therefore cannot be a source of, knowledge of others' goals. 
+For the inference it captures relies on the premise that the mindreader and her target are engaged in actions with a distributive goal.
+But for the mindreader to know this premise it seems she must   already know which goal her target's actions are directed to.
 
 Fortunately there is a way around this.  
-For there are various cues which signal that one agent is prepared to engage in joint action with another.  
+For there are various cues which signal that one agent is prepared to engage in joint action with another,
+and joint actions involve distributive goals.  
 \label{twin_pram}
 Seeing a stranger with the haggard look of a new parent struggling to get his twin pram on to the bus, you grab the front wheels and make eye contact, raising your eyebrows and smiling.
 (The noise of the street rules out talking, 
 and you can barely speak the local language anyway.)   
 In this way you signal that you are about to act jointly with the stranger, to lift the pram with him.   
 Since the stranger is fully committed to getting his pram onto the bus,
-he knows what the goals of his own actions will be.
+he knows what the sole goal of his own actions will be.
+But he also knows that you will engage in joint action with him,
+which means that your actions and his actions will have a distributive goal.
 This enables him to infer the goal of your imminent actions: 
 your goal is his goal, to get the pram onto the bus.
 
@@ -605,7 +731,12 @@ Our suggestion, then, is that the following inference characterises a route to k
 %
 \begin{enumerate}
 \item You are willing to engage in some joint action\footnote{
-*What notion of joint action is needed here?  Any will do as long as it involves distributive goals.
+We leave open the issue of how joint action is to be characterised subject only to the 
+requirement that all joint actions must involve distributive goals.
+Attempts to characterise joint action in ways relevant to explaining development include
+	\citet{Tollefsen:2005vh},
+	\citet{pacherie_framing_2011} and
+	\citet{Butterfill:2011fk}.
 }
 or other with me
 %(for example, because you have made eye contact with me while I was in the middle of attempting to do something).
