--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -108,8 +108,35 @@ In this paper we aim to show
 that mindreaders actually or apparently capable of interacting with their targets are at an advantage not only in practice but also in theory.
 Their ascriptions could rely on evidence and principles which would be unavailable if they were entirely passive observers.
 
-Why investigate this claim?
-One reason is simply because the investigation will enable us to revise and extend existing accounts of the evidential basis of mindreading  in ways that make them more accurate and comprehensive.
+Why suppose, in advance of considering the details, that interacting mindreaders might know more?
+A mindreader's target is often also a mindreader and may sometimes reciprocate by taking the mindreader as a target for mindreading.
+%Where this happens we have mindreaders mindreading and being mindread by mindreaders.
+%The mindreader is her target's target for mindreading.
+It ought to be possible, in mindreading, to make use of this reciprocity.
+%of the fact that the mindreader's target reciprocates by taking the mindreader to be a target for mindreading.
+But how could such reciprocity facilitate mindreading?
+If we assume the mindreader is merely observing her target,
+that there is no potential for interaction,
+then it seems that any way of exploiting reciprocity would involve higher-order ascriptions. 
+The mindreader would ascribe to her target beliefs (say) about the mindreader's own beliefs and other mental states.
+And if her target reciprocates, she might escalate by ascribing to the target beliefs about her own beliefs about the target's beliefs about her beliefs.
+While this might be useful in some situations, 
+the nesting this approach requires quickly becomes dauntingly complex.
+And the basic intuition about reciprocal mindreading goes unsatisfied.
+Reciprocal mindreading should sometimes result in 
+something like a meeting of minds
+rather than
+an escalation of higher-order ascriptions.
+Perhaps, then, fully exploiting reciprocity in mindreading
+requires the mindreaders to be in a position to interact with each other.
+Perhaps in some cases 
+being or appearing poised to interact
+can somehow enable mindreaders to exploit reciprocity without first having to ascribe of higher-order mental states.
+This is the hunch we develop in what follows.
+
+
+Even if the hunch turns out to be right, why investigate it?
+One reason is that the investigation will enable us to revise and extend existing accounts of the evidential basis of mindreading  in ways that make them more accurate and comprehensive.
 Another motive concerns the emergence, in evolution and in development, of mindreading.
 Several researchers have offered quite general conjectures about how interaction might explain the emergence of sophisticated forms of cognition.
 One view is that needs to interact with others have driven and shaped some aspects of cognition.%
@@ -135,7 +162,7 @@ See also
 Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details on just how interaction might facilitate the emergence of mindreading.
 
 Our claim needs to be qualified in several ways.
-First, we should highlight something already explicit that has not yet been emphasised:
+First, we should highlight something already explicit but not yet emphasised:
 the claim applies not just to 
  mindreaders who actually could interact with their targets
 but also to
@@ -175,6 +202,9 @@ which they might not otherwise be in a position to know.
 %This matters
 %because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
 %And, as we shall argue, this in turn matters because it may bear on the possibility of explaining the emergence, in evolution or in development, of mindreading.
+
+Developing these ideas requires us to fill in some background on goal ascription and its limits, as well as on notions of goal-directed interactions.
+Readers impatient to get to the central idea should skip to section \vref{sec:your_goal_is_my_goal}.
 
 
 
@@ -693,18 +723,21 @@ available only to interacting mindreaders.
 %might be able to exploit routes to knowledge of the goals of actions
 %which would be unavailable  were  they mere observers.
 
-
+%*** remove this line: to avoid annoying error only
+\
 
 \section{Your-goal-is-my-goal: a route to knowledge}
+\label{sec:your_goal_is_my_goal}
 If a mindreader is able to interact with her targets,
 if she is not limited to merely observing them,
 how might this provide her with a route to knowledge of the goals of their actions?
-The intuitive idea we started with hinges on interactions involving distributive goals
+The answer hinges on interactions involving distributive goals
 (see \vref{sec:joint_action}).
-Our intuitive idea was this:
+
+Here is an intuitive idea that doesn't quite work:
 if a mindreader is engaged in an interaction with her target that involves a distributive goal, 
 it may be easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
-So if she knows the goal of her own actions and she knows that she is engaged in an interaction involving a distributive goal  with her target,
+So if she knows the goal of her own actions and she knows that she is engaged with her target in an interaction involving a distributive goal,
 then she already knows what the goal of her target's actions are.
 %Roughly speaking, the interpreter can reason about her target thus: your goal is my goal.
 
@@ -735,13 +768,17 @@ We leave open the issue of how joint action is to be characterised subject only 
 requirement that all joint actions must involve distributive goals.
 Attempts to characterise joint action in ways relevant to explaining development include
 	\citet{Tollefsen:2005vh},
+	\citet{Carpenter:2009wq},
 	\citet{pacherie_framing_2011} and
 	\citet{Butterfill:2011fk}.
+The last of these 
+not only shows how a primitive form of joint action can be characterised without ascriptions of higher-order mental states
+but also shares our focus on relations between actions and goals rather than between agents and intentions.
 }
 or other with me
 %(for example, because you have made eye contact with me while I was in the middle of attempting to do something).
 
-\item I am not about to change which goal my actions will be directed to.
+\item I am not about to change the single goal to which my actions will be directed.
 
 \end{enumerate}
 %
@@ -752,8 +789,8 @@ Therefore:
 \item A goal of your actions will be my goal, the goal I now envisage that my actions will be directed to.
 \end{enumerate}
 %
-Call this the \emph{your-goal-is-my-goal inference}.  
-To say that this inference characterises a route to knowledge implies two things.  
+Call this inference \emph{your-goal-is-my-goal}.  
+To say that it characterises a route to knowledge implies two things.  
 First, in some cases it is possible to know the premises, 1–2, without already knowing the conclusion, 3.  
 Second, in some of those cases knowing the premises would put one in a position to know the conclusion.  
 We shall consider these points in turn
@@ -763,17 +800,17 @@ Is it ever possible to know the premises without first knowing the conclusion?
 Consider the first premise.  
 Sometimes 
 in the right contexts
-an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she are about to engage in joint action with him.
-Exploiting these indicators does not typically depend on knowing the particular contents of any of their beliefs, desires or goals.  
+an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she is about to engage in joint action with him.
+Exploiting these indicators does not typically depend on knowing the particular contents of any beliefs, desires or goals.  
 Expressions, gestures and movements can naturally indicate imminent jointness in much the way thay can also naturally indicate emotions.\footnote{
-Ideas along these lines are suggested by the discussion of \emph{emergent coordination} in \citet{Knoblich:2010fk}.
+Ideas along these lines are suggested by the discussion of {emergent coordination} in \citet{Knoblich:2010fk}.
 }  
 Of course these indicators provide no guarantee that others are genuinely willing to engage in joint action.  
 But they are sufficiently reliable to ground knowledge in some cases.  
 The existence of such indicators shows that knowing the first  premise of the above inference does not require already knowing which particular goals the other has.  
 
 Not everything needs to rest on indicators, however.
-It is sometimes possible to know that others are about to willing in joint action with you even without relying on such indicators.  
+It is sometimes possible to know that others are willing to engage in joint action with you even without relying on such indicators.  
 Thanks to widespread dispositions to act jointly, in some situations it is reasonable to take for granted that others are willing to act jointly.  
 For example, this is often so for children surrounded by family or familiar adults who are struggling with a coat.  
 And in at least some subcultures people using public transport can reasonably take for granted that, within limits, those around them will act jointly with them when the need is clear.
@@ -782,7 +819,7 @@ This may be fatal for the peripatetic cosmopolitan,
 but for others what matters is not whether the dispositions are universal but only that they are sufficiently widespread to be predictable.
 
 Turning to the second point,
-does knowing the premises of the your-goal-is-my-goal inference sometimes put one in a position to know the conclusion?  
+could knowing the premises of the your-goal-is-my-goal inference ever put one in a position to know the conclusion?  
 Of course the inference is not deductive and will only work when certain background conditions are met.  
 These background conditions include the other having largely true beliefs concerning which goal your actions are or will be directed to.
 After all, the other agent may be willing to act jointly with you while being entirely mistaken about the goals to which your actions will be directed.
@@ -807,27 +844,27 @@ it may not be necessary to think of this situation as a situation where the prem
 nor even to be able to think of it in this way.
 
 In principle,
-exploiting your-goal-is-my-goal does not require that the interpreter actually be in a position to interact with her target.
-It is sufficient (and would be necessary but for some special cases) that the target takes the interpreter to be in a position to interact with him. 
+exploiting your-goal-is-my-goal does not require actually being in a position to interact with the target of goal ascription.
+It is sufficient (and would be necessary but for some special cases) to be taken by the target to be in a position to interact. 
 Our concern, however,
 is with cases that are likely to be important for understanding
 development or evolution (and ideally both).
-This mandates a focus on interpreters of limited sophistication
+This motivates a focus on goal ascribers of limited sophistication
 who lack both deep insight into others' minds and fully-fledged communicative abilities.
 Such interpreters are unlikely to be able to contrive or exploit situations in which they only appear to be in a position to interact with their targets.
-So the explanatorily relevant cases are those 
-in which an interpreter is manifestly in a position to interact with her target.
+When we come to applications of your-goal-is-my-goal, the relevant cases will be those 
+in which a goal ascriber is manifestly in a position to interact with her target.
 
 
-Our aim in identifying the your-goal-is-my-goal is not to 
-defend a detailed hypothesis about the mechanisms and processes involved in mindreading.
+Our aim in identifying the your-goal-is-my-goal inference is not to 
+defend a detailed hypothesis about  mechanisms and processes supporting mindreading.
 Instead our present concerns are limited to a normative question about the evidential basis of mindreading.
 The your-goal-is-my-goal inference matters
-not because it describes how interpreters actually assign goals
+not because it describes exactly how anyone actually assigns goals (maybe it doesn't)
 but because 
 it characterises a route to knowledge
 that is closed to mere observers
-but open to interacting mindreaders.
+and open to interacting mindreaders.
  
 
 \section{Avoiding the problem of opaque means}
@@ -835,7 +872,7 @@ but open to interacting mindreaders.
 The problem of opaque means was this:
  failures to identify to which ends actions are means can impair goal ascription (see section \vref{sec:opaque_means}).
 %As we saw, this problem is particularly likely to arise in cases involving novel tools and communicative gestures.
-Showing how your-goal-is-my-goal makes  avoiding this problem possible is a way of demonstrating the potential value  to mindreaders of interaction. 
+Showing how your-goal-is-my-goal makes  avoiding this problem possible is a way of demonstrating the potential value   of interaction for mindreading. 
 
 In our earlier example 
 a novice parent is struggling to lift his heavy twin pram onto a bus when a stranger joins in and they lift the pram together (\vpageref*{twin_pram}).
@@ -851,7 +888,7 @@ your-goal-is-my goal gives the parent  additional evidence for supposing that,
 even though the stranger's actions do not seem to him to be a means to getting the pram onto the bus, 
 this really is the goal of her actions.
 Of course this additional evidence will not necessarily trump   other evidence.
-But it does provide a possible way around the problem of opaque means by providing evidence for goal ascriptions that is independent of a mindreader's understanding of which ends actions are means to.
+But it does provide a possible way around the problem of opaque means by providing evidence for goal ascriptions that is independent of a goal ascriber's understanding of which ends actions are means to.
 
 We saw earlier that the problem of opaque means  may impair goal ascription where actions involve novel uses for tools.
 How could your-goal-is-my-goal mitigate the problem in such cases?
@@ -885,14 +922,14 @@ In purely observational mindreading, the target's beliefs about the goals of the
 But interacting mindreaders who rely on your-goal-is-my-goal
 thereby rely on their targets' having correctly identified the goals of their actions.
 Of course this is sometimes a reason not to rely on your-goal-is-my-goal.
-But where the target has better understanding of relevant means-ends relations,
+But where the target understands relevant means-ends relations,
 such as actions involving novel tools,
 the your-goal-is-my-goal route to knowledge of other's goals may sometimes be the only option.
 
 The distant promise of all this is that 
-understanding how interaction widens the evidential basis for mindreading
+understanding how interaction widens the evidential basis for goal ascription and mindreading more generally 
 may eventually enable us to explain
-the origins (in evolution or development, and ideally both) of abilities to learn novel and opaque uses for tools from other agents
+the origins, in evolution or development (and ideally both), of abilities to learn novel and opaque uses for tools from others 
 without assuming that 
 rich communicative skills
 or 
@@ -919,7 +956,7 @@ a simple understanding of goals
 to 
 an early understanding communicative actions.%
 \footnote{
-Please note that, although our discussion borrows an experimental paradigm
+Note that although our discussion borrows an experimental paradigm,
 our aim is not to argue for empirical hypotheses about chimpanzee social cognition.
 Our aim is only to argue for the theoretical significance of interaction for mindreading by showing 
 that your-goal-is-my-goal
@@ -929,7 +966,7 @@ from
  a simple understanding of goals
 to
  an early understanding of communicative actions.
-Of course it would strengthen our argument if we could provide evidence to show that this actually happens.
+Of course it would powerfully demonstrate the relevance of our theoretical argument if we could provide evidence to show that this actually happens.
 But for now we are concerned with more narrowly conceptual issues.
 }
 
@@ -942,13 +979,12 @@ So we probably do not think of the pointing action as having any goal which woul
 (In principle we might perfectly understand the pointing action while failing to react to it in any systematic way because we are uncertain about the agent's integrity; but let us discount this possibility for the sake of illustration.)
 Now suppose 
 that, 
-before pointing, the agent had used engaging facial gestures to signal willingness to engage in joint action with us; and
-that
-we were able to think of retrieving the food as a possible distributive goal%
-\footnote{
-    On \emph{distributive goal} see section \vref{sec:joint_action}.
-  }
-of our actions;
+before pointing, the agent had used facial gestures to signal willingness to engage in joint action with us
+%; and that we were able to think of retrieving the food as a possible distributive goal%
+%\footnote{
+%    On \emph{distributive goal} see section \vref{sec:joint_action}.
+%  }
+%of our actions;
 and 
 that we had exploited the my-goal-is-your-goal inference.
 Then we would believe,
@@ -956,12 +992,12 @@ perhaps mistakenly,
 that a goal of the pointing action was to retrieve the food.
 In which case the pointing action would have been no less helpful in enabling us to succeed than the failed reach---which, as you may recall, was very helpful.
 So the your-goal-is-my-goal inference can 
-enable interpreters
+enable a goal ascriber
 to  
-misunderstand pointing actions as something like  failed reaches rather than as communicative gestures.
+misunderstand pointing actions as something like  failed reaches.
 This means that,
-even without any understanding of communication,
-they can respond appropriately to helpful pointing actions in the context of joint action.
+even without any deeper understanding of communication,
+goal ascribers can respond appropriately to helpful pointing actions in the context of joint action.
 
 
 It is natural to suppose that the difficulty chimpanzees have in Hare and Tomasello's experiments with responding appropriately to helpful pointing but not to failed reaching
@@ -1006,8 +1042,18 @@ in being an attempt to retrieve the reward.
 
 So far we have illustrated how your-goal-is-my-goal enables responding appropriately to communicative gestures with two examples, pointing and holding up a replica.
 The pattern of reasoning generalises to a wider range of communicative gestures including single-word utterances.
-The basic requirement is this: in a particular context, the interpreter must associate a communicative gesture with its referent.
-For instance, she must associate the pointing gesture with the object indicated; or, if (say) she is looking for an object she must associate an utterance of `cupboard' with the nearby cupboard.
+The basic requirement is this: in a particular context, the goal ascriber must associate a communicative gesture with its referent.
+For instance, she must associate the pointing gesture with the object indicated; or, if (say) she is looking for an individual she must associate an utterance of `daddy' with the appropriate person.%
+\footnote{
+Such associations appear to be in place by six months of age or earlier \citep{tincoff:1999_beginnings_,tincoff:2011}.
+There is debate on when infants are first able to rapidly associate words with novel objects \citep{werker:1998_acquisition,friedrich:2011_word_}.
+Interestingly,
+a possible developmental decalage separating 
+two measures of whether infants have formed a word-object association,
+preferential looking and comprehension as measured by reaching in response to a request  \citep{gurteen:2011_rapid},
+may suggest that
+infants can form a word-object association before they can comprehend communicative actions involving the word.
+}
 As we saw, 
 outside the context of joint action,
 merely associating a gesture with its referent falls short of being able to respond appropriately.
